Update theme to fix textarea alignment

--- a/image/src/frontend/stylesheets/theme.css
+++ b/image/src/frontend/stylesheets/theme.css
@@ -33,8 +33,6 @@ html {
 
 	/* Alignment properties */
 	justify-content: center;
-	justify-items: center;
-	align-content: center;
 	align-items: stretch;
 
 	/* Theming properties */
